# Generalized_Operation_Diffusion

./: .gitignore  README.md
Generalized_Operation_Diffusion/: ga.py
Generalized_Operation_Diffusion/Data/: DataGeneration.py  GA.py  UniformInstanceGen.py
Generalized_Operation_Diffusion/difusco/difusco/: Trainer.py  env.yml  env_win.yml  pl_jssp_model.py  pl_meta_model.py  pl_tsp_model.py  train.py
Generalized_Operation_Diffusion/difusco/difusco/Data/: DataGeneration.py  GA.py  UniformInstanceGen.py
Generalized_Operation_Diffusion/difusco/difusco/Data/result of job 2025-08-15 16h-51m-12s/: result info.txt
Generalized_Operation_Diffusion/difusco/difusco/Data/result of job 2025-08-15 16h-51m-13s/: result info.txt
Generalized_Operation_Diffusion/difusco/difusco/Data/result of job 2025-08-15 16h-51m-14s/: result info.txt
Generalized_Operation_Diffusion/difusco/difusco/Data/result of job 2025-08-15 16h-52m-36s/: result info.txt
Generalized_Operation_Diffusion/difusco/difusco/co_datasets/: tsp_graph_dataset.py
Generalized_Operation_Diffusion/difusco/difusco/models/: gnn_encoder.py
Generalized_Operation_Diffusion/difusco/difusco/utils/: diffusion_schedulers.py
JSSP/: pl_jssp_model.py  pyproject.toml  train.py
JSSP/Data/: GA.py  UniformInstanceGen.py
JSSP/co_datasets/: tsp_graph_dataset.py
JSSP/models/: gnn_encoder.py  gnn_instance_embedding.py
JSSP/utils/: JSSP_utils.py  diffusion_schedulers.py  tsp_utils.py
JSSP/utils/cython_merge/: cython_merge.c  cython_merge.cp39-win_amd64.pyd
difusco/difusco/: environment.yml  pl_jssp_model.py  train.py  train_orig.py
difusco/difusco/Data/TrainData/: GeneratedData_Job3Machine5Seed42Size10.npy
difusco/difusco/Data/result of job 2025-08-15 16h-51m-11s/: result info.txt
difusco/difusco/Data/result of job 2025-08-15 16h-51m-15s/: result info.txt
difusco/difusco/Data/result of job 2025-08-15 16h-52m-36s/: problem info.txt
difusco/difusco/Data/result of job 2025-08-15 16h-52m-37s/: result info.txt
difusco/difusco/Data/result of job 2025-08-15 16h-52m-38s/: algorithm info.txt  result info.txt
difusco/difusco/Data/result of job 2025-08-15 16h-52m-40s/: population info.txt  result info.txt
difusco/difusco/Data/result of job 2025-08-15 16h-53m-12s/: result info.txt
difusco/difusco/Data/result of job 2025-08-15 16h-53m-13s/: result info.txt
difusco/difusco/Data/result of job 2025-08-15 16h-53m-14s/: result info.txt
difusco/difusco/Data/result of job 2025-08-15 16h-53m-15s/: result info.txt
difusco/difusco/Data/result of job 2025-08-15 16h-53m-16s/: result info.txt
difusco/difusco/co_datasets/: tsp_graph_dataset.py
(+98 files in other folders)
