[project]
name = "JSSP"
version = "0.1.0"
description = "Environment for JSSP"
requires-python = ">=3.10,<3.11"

dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.14",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "Bottleneck==1.4.2",
    "Brotli==1.0.9",
    "brotlicffi==1.0.9.2",
    "certifi==2025.7.14",
    "cffi==1.17.1",
    "charset-normalizer==3.3.2",
    "click==8.2.1",
    "contourpy==1.3.1",
    "cycler==0.11.0",
    "Cython==3.1.2",
    "filelock==3.17.0",
    "fonttools==4.55.3",
    "frozenlist==1.7.0",
    "fsspec==2025.7.0",
    "gitdb==4.0.12",
    "GitPython==3.1.44",
    "gmpy2==2.2.1",
    "idna==3.7",
    "Jinja2==3.1.6",
    "joblib==1.4.2",
    "kiwisolver==1.4.8",
    "lightning-utilities==0.14.3",
    "MarkupSafe==3.0.2",
    "matplotlib==3.10.0",

    # === MKL 관련 ===
    "mkl-fft>=2.0.0",

    "mpmath==1.3.0",
    "multidict==6.6.3",
    "networkx==3.4.2",
    "numexpr==2.11.0",
    "numpy==2.2.5",
    "packaging==24.2",
    "pandas==2.3.1",
    "pillow==11.3.0",
    "platformdirs==4.3.8",
    "propcache==0.3.2",
    "protobuf==6.31.1",
    "psutil==7.0.0",
    "pycparser==2.21",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "pyparsing==3.2.0",
    "PyQt6==6.7.1",
    "PyQt6-sip==13.9.1",
    "PySocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "pytorch-lightning==2.5.2",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "requests==2.32.4",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "sentry-sdk==2.33.2",
    "setuptools==72.1.0",
    "sip==6.10.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sympy==1.13.1",
    "threadpoolctl==3.5.0",
    "tomli==2.0.1",

    # --- PyTorch 계열 ---
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "torchmetrics==1.7.4",

    # PyG 생태계 (torch 먼저 설치가 전제)
    "torch-geometric==2.6.1",
    "torch-scatter==2.1.2",
    "torch-sparse==0.6.18",

    "tornado==6.5.1",
    "tqdm==4.67.1",
    "triton==3.1.0",
    "typing-extensions==4.12.2",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "unicodedata2==15.1.0",
    "urllib3==2.5.0",
    "wandb==0.21.0",
    "wheel==0.45.1",
    "yarl==1.20.1"
]

[tool.uv]
index-url = "https://download.pytorch.org/whl/cu121"
extra-index-url = ["https://pypi.org/simple"]
find-links = ["https://data.pyg.org/whl/torch-2.5.1%2Bcu121.html"]

[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]
torch-sparse   = ["torch"]